CustomScriptParser.py
# Generated from CustomScript.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CustomScriptParser ( Parser ):

    grammarFileName = "CustomScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "'{'", "'}'", "';'", 
                     "','", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\'", "'\\''", "'\\\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IN", "OUT", "TO", "IF", "FOR", "FUN", "ARG1", "ARG2", 
                      "ARG3", "ARG4", "ARG5", "ARG6", "ARG7", "ARG8", "ARG9", 
                      "LARG1", "LARG2", "LARG3", "LARG4", "LARG5", "LARG6", 
                      "LARG7", "LARG8", "LARG9", "STRINGVAR", "NUMBERVAR", 
                      "NUMBER", "IDENTIFIER", "BACKSLASH", "SINGLEQUOTE", 
                      "DOUBLEQUOTE", "CONDITION", "OPERAND", "TEXT", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_script = 0
    RULE_scriptelement = 1
    RULE_line = 2
    RULE_op = 3
    RULE_addon = 4
    RULE_redirect = 5
    RULE_var = 6
    RULE_command = 7
    RULE_customin = 8
    RULE_out = 9
    RULE_to = 10
    RULE_ifstatement = 11
    RULE_forstatement = 12
    RULE_functionstatement = 13
    RULE_functioncall = 14
    RULE_functioninput = 15
    RULE_functioninputpart = 16
    RULE_operation = 17
    RULE_operator = 18
    RULE_conditional = 19
    RULE_conditionpart = 20
    RULE_arg = 21

    ruleNames =  [ "script", "scriptelement", "line", "op", "addon", "redirect", 
                   "var", "command", "customin", "out", "to", "ifstatement", 
                   "forstatement", "functionstatement", "functioncall", 
                   "functioninput", "functioninputpart", "operation", "operator", 
                   "conditional", "conditionpart", "arg" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    IN=8
    OUT=9
    TO=10
    IF=11
    FOR=12
    FUN=13
    ARG1=14
    ARG2=15
    ARG3=16
    ARG4=17
    ARG5=18
    ARG6=19
    ARG7=20
    ARG8=21
    ARG9=22
    LARG1=23
    LARG2=24
    LARG3=25
    LARG4=26
    LARG5=27
    LARG6=28
    LARG7=29
    LARG8=30
    LARG9=31
    STRINGVAR=32
    NUMBERVAR=33
    NUMBER=34
    IDENTIFIER=35
    BACKSLASH=36
    SINGLEQUOTE=37
    DOUBLEQUOTE=38
    CONDITION=39
    OPERAND=40
    TEXT=41
    WHITESPACE=42
    NEWLINE=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CustomScriptParser.EOF, 0)

        def scriptelement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CustomScriptParser.ScriptelementContext)
            else:
                return self.getTypedRuleContext(CustomScriptParser.ScriptelementContext,i)


        def functionstatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CustomScriptParser.FunctionstatementContext)
            else:
                return self.getTypedRuleContext(CustomScriptParser.FunctionstatementContext,i)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = CustomScriptParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.scriptelement()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CustomScriptParser.IF) | (1 << CustomScriptParser.FOR) | (1 << CustomScriptParser.STRINGVAR) | (1 << CustomScriptParser.NUMBERVAR) | (1 << CustomScriptParser.IDENTIFIER) | (1 << CustomScriptParser.TEXT))) != 0)):
                    break

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CustomScriptParser.FUN:
                self.state = 49
                self.functionstatement()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(CustomScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScriptelementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forstatement(self):
            return self.getTypedRuleContext(CustomScriptParser.ForstatementContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(CustomScriptParser.IfstatementContext,0)


        def line(self):
            return self.getTypedRuleContext(CustomScriptParser.LineContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_scriptelement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScriptelement" ):
                listener.enterScriptelement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScriptelement" ):
                listener.exitScriptelement(self)




    def scriptelement(self):

        localctx = CustomScriptParser.ScriptelementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scriptelement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CustomScriptParser.FOR]:
                self.state = 57
                self.forstatement()
                pass
            elif token in [CustomScriptParser.IF]:
                self.state = 58
                self.ifstatement()
                pass
            elif token in [CustomScriptParser.STRINGVAR, CustomScriptParser.NUMBERVAR, CustomScriptParser.IDENTIFIER, CustomScriptParser.TEXT]:
                self.state = 59
                self.line()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(CustomScriptParser.NEWLINE, 0)

        def op(self):
            return self.getTypedRuleContext(CustomScriptParser.OpContext,0)


        def var(self):
            return self.getTypedRuleContext(CustomScriptParser.VarContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(CustomScriptParser.FunctioncallContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = CustomScriptParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CustomScriptParser.TEXT]:
                self.state = 62
                self.op()
                pass
            elif token in [CustomScriptParser.STRINGVAR, CustomScriptParser.NUMBERVAR]:
                self.state = 63
                self.var()
                pass
            elif token in [CustomScriptParser.IDENTIFIER]:
                self.state = 64
                self.functioncall()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 67
            self.match(CustomScriptParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CustomScriptParser.CommandContext,0)


        def addon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CustomScriptParser.AddonContext)
            else:
                return self.getTypedRuleContext(CustomScriptParser.AddonContext,i)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)




    def op(self):

        localctx = CustomScriptParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.command()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CustomScriptParser.IN) | (1 << CustomScriptParser.OUT) | (1 << CustomScriptParser.TO))) != 0):
                self.state = 70
                self.addon()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirect(self):
            return self.getTypedRuleContext(CustomScriptParser.RedirectContext,0)


        def command(self):
            return self.getTypedRuleContext(CustomScriptParser.CommandContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_addon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddon" ):
                listener.enterAddon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddon" ):
                listener.exitAddon(self)




    def addon(self):

        localctx = CustomScriptParser.AddonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_addon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.redirect()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CustomScriptParser.TEXT:
                self.state = 77
                self.command()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def customin(self):
            return self.getTypedRuleContext(CustomScriptParser.CustominContext,0)


        def out(self):
            return self.getTypedRuleContext(CustomScriptParser.OutContext,0)


        def to(self):
            return self.getTypedRuleContext(CustomScriptParser.ToContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_redirect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirect" ):
                listener.enterRedirect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirect" ):
                listener.exitRedirect(self)




    def redirect(self):

        localctx = CustomScriptParser.RedirectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_redirect)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CustomScriptParser.IN]:
                self.state = 80
                self.customin()
                pass
            elif token in [CustomScriptParser.OUT]:
                self.state = 81
                self.out()
                pass
            elif token in [CustomScriptParser.TO]:
                self.state = 82
                self.to()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.WHITESPACE)
            else:
                return self.getToken(CustomScriptParser.WHITESPACE, i)

        def STRINGVAR(self):
            return self.getToken(CustomScriptParser.STRINGVAR, 0)

        def NUMBERVAR(self):
            return self.getToken(CustomScriptParser.NUMBERVAR, 0)

        def IDENTIFIER(self):
            return self.getToken(CustomScriptParser.IDENTIFIER, 0)

        def arg(self):
            return self.getTypedRuleContext(CustomScriptParser.ArgContext,0)


        def NUMBER(self):
            return self.getToken(CustomScriptParser.NUMBER, 0)

        def TEXT(self):
            return self.getToken(CustomScriptParser.TEXT, 0)

        def operation(self):
            return self.getTypedRuleContext(CustomScriptParser.OperationContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = CustomScriptParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(_la==CustomScriptParser.STRINGVAR or _la==CustomScriptParser.NUMBERVAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.match(CustomScriptParser.WHITESPACE)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CustomScriptParser.IDENTIFIER]:
                self.state = 87
                self.match(CustomScriptParser.IDENTIFIER)
                pass
            elif token in [CustomScriptParser.ARG1, CustomScriptParser.ARG2, CustomScriptParser.ARG3, CustomScriptParser.ARG4, CustomScriptParser.ARG5, CustomScriptParser.ARG6, CustomScriptParser.ARG7, CustomScriptParser.ARG8, CustomScriptParser.ARG9, CustomScriptParser.LARG1, CustomScriptParser.LARG2, CustomScriptParser.LARG3, CustomScriptParser.LARG4, CustomScriptParser.LARG5, CustomScriptParser.LARG6, CustomScriptParser.LARG7, CustomScriptParser.LARG8, CustomScriptParser.LARG9]:
                self.state = 88
                self.arg()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CustomScriptParser.WHITESPACE:
                self.state = 91
                self.match(CustomScriptParser.WHITESPACE)


            self.state = 94
            self.match(CustomScriptParser.T__0)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CustomScriptParser.WHITESPACE:
                self.state = 95
                self.match(CustomScriptParser.WHITESPACE)


            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 98
                self.match(CustomScriptParser.NUMBER)
                pass

            elif la_ == 2:
                self.state = 99
                self.match(CustomScriptParser.TEXT)
                pass

            elif la_ == 3:
                self.state = 100
                self.operation()
                pass


            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 103
                    self.match(CustomScriptParser.WHITESPACE) 
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(CustomScriptParser.TEXT, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.WHITESPACE)
            else:
                return self.getToken(CustomScriptParser.WHITESPACE, i)

        def IDENTIFIER(self):
            return self.getToken(CustomScriptParser.IDENTIFIER, 0)

        def arg(self):
            return self.getTypedRuleContext(CustomScriptParser.ArgContext,0)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CustomScriptParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(CustomScriptParser.TEXT)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 110
                self.match(CustomScriptParser.WHITESPACE)
                self.state = 113
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CustomScriptParser.IDENTIFIER]:
                    self.state = 111
                    self.match(CustomScriptParser.IDENTIFIER)
                    pass
                elif token in [CustomScriptParser.ARG1, CustomScriptParser.ARG2, CustomScriptParser.ARG3, CustomScriptParser.ARG4, CustomScriptParser.ARG5, CustomScriptParser.ARG6, CustomScriptParser.ARG7, CustomScriptParser.ARG8, CustomScriptParser.ARG9, CustomScriptParser.LARG1, CustomScriptParser.LARG2, CustomScriptParser.LARG3, CustomScriptParser.LARG4, CustomScriptParser.LARG5, CustomScriptParser.LARG6, CustomScriptParser.LARG7, CustomScriptParser.LARG8, CustomScriptParser.LARG9]:
                    self.state = 112
                    self.arg()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CustomScriptParser.WHITESPACE:
                    self.state = 115
                    self.match(CustomScriptParser.WHITESPACE)



            elif la_ == 2:
                self.state = 118
                self.match(CustomScriptParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CustominContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IN(self):
            return self.getToken(CustomScriptParser.IN, 0)

        def WHITESPACE(self):
            return self.getToken(CustomScriptParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CustomScriptParser.RULE_customin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustomin" ):
                listener.enterCustomin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustomin" ):
                listener.exitCustomin(self)




    def customin(self):

        localctx = CustomScriptParser.CustominContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_customin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(CustomScriptParser.IN)
            self.state = 122
            self.match(CustomScriptParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUT(self):
            return self.getToken(CustomScriptParser.OUT, 0)

        def WHITESPACE(self):
            return self.getToken(CustomScriptParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CustomScriptParser.RULE_out

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOut" ):
                listener.enterOut(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOut" ):
                listener.exitOut(self)




    def out(self):

        localctx = CustomScriptParser.OutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_out)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(CustomScriptParser.OUT)
            self.state = 125
            self.match(CustomScriptParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TO(self):
            return self.getToken(CustomScriptParser.TO, 0)

        def WHITESPACE(self):
            return self.getToken(CustomScriptParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return CustomScriptParser.RULE_to

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo" ):
                listener.enterTo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo" ):
                listener.exitTo(self)




    def to(self):

        localctx = CustomScriptParser.ToContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_to)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(CustomScriptParser.TO)
            self.state = 128
            self.match(CustomScriptParser.WHITESPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CustomScriptParser.IF, 0)

        def conditional(self):
            return self.getTypedRuleContext(CustomScriptParser.ConditionalContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.NEWLINE)
            else:
                return self.getToken(CustomScriptParser.NEWLINE, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.WHITESPACE)
            else:
                return self.getToken(CustomScriptParser.WHITESPACE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CustomScriptParser.LineContext)
            else:
                return self.getTypedRuleContext(CustomScriptParser.LineContext,i)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_ifstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstatement" ):
                listener.enterIfstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstatement" ):
                listener.exitIfstatement(self)




    def ifstatement(self):

        localctx = CustomScriptParser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(CustomScriptParser.IF)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CustomScriptParser.WHITESPACE:
                self.state = 131
                self.match(CustomScriptParser.WHITESPACE)


            self.state = 134
            self.match(CustomScriptParser.T__1)
            self.state = 135
            self.conditional()
            self.state = 136
            self.match(CustomScriptParser.T__2)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CustomScriptParser.WHITESPACE:
                self.state = 137
                self.match(CustomScriptParser.WHITESPACE)


            self.state = 140
            self.match(CustomScriptParser.T__3)
            self.state = 141
            self.match(CustomScriptParser.NEWLINE)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CustomScriptParser.STRINGVAR) | (1 << CustomScriptParser.NUMBERVAR) | (1 << CustomScriptParser.IDENTIFIER) | (1 << CustomScriptParser.TEXT))) != 0):
                self.state = 142
                self.line()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(CustomScriptParser.T__4)
            self.state = 149
            self.match(CustomScriptParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CustomScriptParser.FOR, 0)

        def var(self):
            return self.getTypedRuleContext(CustomScriptParser.VarContext,0)


        def conditional(self):
            return self.getTypedRuleContext(CustomScriptParser.ConditionalContext,0)


        def operation(self):
            return self.getTypedRuleContext(CustomScriptParser.OperationContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.NEWLINE)
            else:
                return self.getToken(CustomScriptParser.NEWLINE, i)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CustomScriptParser.WHITESPACE)
            else:
                return self.getToken(CustomScriptParser.WHITESPACE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CustomScriptParser.LineContext)
            else:
                return self.getTypedRuleContext(CustomScriptParser.LineContext,i)


        def getRuleIndex(self):
            return CustomScriptParser.RULE_forstatement
